CREATE TABLE IF NOT EXISTS ingredients
(
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_ingredients PRIMARY KEY (id)
);