-- Create units table for measurement types
CREATE TABLE IF NOT EXISTS units
(
    id                      BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name                    VARCHAR(255)                            NOT NULL,
    symbol                  VARCHAR(50)                             NOT NULL,
    measurement_type        VARCHAR(50)                             NOT NULL,
    base_conversion_factor  DOUBLE PRECISION                        NOT NULL,
    local_id                VARCHAR(255)                            UNIQUE,
    CONSTRAINT pk_units PRIMARY KEY (id),
    CONSTRAINT check_measurement_type CHECK (measurement_type IN ('WEIGHT', 'VOLUME', 'COUNT'))
);

-- Index for filtering units by measurement type
CREATE INDEX idx_units_measurement_type ON units(measurement_type);

-- Index for sync engine lookups by local_id
CREATE INDEX idx_units_local_id ON units(local_id);