-- Create quantities table for measured amounts
CREATE TABLE IF NOT EXISTS quantities
(
    id       BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    amount   DOUBLE PRECISION                        NOT NULL,
    unit_id  BIGINT                                  NOT NULL,
    local_id VARCHAR(255)                            UNIQUE,
    CONSTRAINT pk_quantities PRIMARY KEY (id),
    CONSTRAINT fk_quantities_unit FOREIGN KEY (unit_id) REFERENCES units (id) ON DELETE CASCADE
);

-- Index for lookups by unit (e.g., finding all quantities using "cups")
CREATE INDEX idx_quantities_unit_id ON quantities(unit_id);

-- Index for sync engine lookups by local_id
CREATE INDEX idx_quantities_local_id ON quantities(local_id);